@@ -53,7 +53,7 @@ namespace QuantLib {
         <li>Saturdays</li>
         <li>Sundays</li>
         <li>New Year's Day, January 1st</li>
-        <li>Sao Paulo City Day, January 25th</li>
+        <li>Sao Paulo City Day, January 25th (up to 2021 included)</li>
         <li>Tiradentes's Day, April 21th</li>
         <li>Labour Day, May 1st</li>
         <li>Revolution Day, July 9th</li>
